--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-device-info": "^11.1.0",
     "react-native-svg": "^15.4.0",
     "react-redux": "^9.1.2",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
