--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-device-info": "^11.1.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
     "react-redux": "^9.1.2",
     "redux": "^4.2.1",
