--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-device-info": "^11.1.0",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
